kubernetes/configs/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: myapp
  name: myapp
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: myapp
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
